# cheatah

./: .env.example  .env.sync  .gcloudignore  .gitignore  .replit  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  README.md  SENDGRID_SETUP.sh  check_all_conversations.py  check_conversations.py  check_leads.py  check_recent_all.py  check_tenant1.py  check_user.py  debug_dan_contact.py  docker-compose.yml  monitor_logs.sh  pyproject.toml  replit.md  seed_tenant.py  test_chat.json  test_chat2.json  test_chat_extraction.sh  verify_schema.py  watch_telnyx.sh
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 0e0a47c4ec9a_add_prompt_status_and_scope.py  15a8a4c29c8f_merge_tenant_number.py  19873b8cba02_merge_contact_branches.py  27e99ad1ae35_add_must_change_password_to_users.py  373dd7474501_add_voice_ab_testing.py  3757de506b23_initial_schema.py  4a1b0bab0fc7_add_source_conversation_id_to_.py  4f5fc47de1ee_merge_widget_api_key_and_contact_id.py  76a30dae7698_add_jackrabbit_org_id_to_tenant_.py  790dc75e8559_add_notes_column_to_leads.py  7ff4aed92d20_add_call_minutes_limit_and_sms_limit_to_.py  85f97ceebafb_add_status_to_conversations.py  894af05a3c74_add_pipeline_stage_to_leads.py  XXXXX_add_sms_models.py  a1fea067b2e2_add_owner_phone_to_tenant_business_.py  add_admin_dashboard_tables.py  add_admin_notification_tracking.py  add_auto_enroll_new_leads.py  add_call_language.py  add_call_summaries_table.py  add_calls_table_and_voice_phone.py  add_contact_id_to_leads.py  add_contact_merge_delete.py  add_contact_profile_fields.py  add_contacts_table.py  add_conversation_topic.py  add_customer_service_tables.py  add_customers_and_support_config.py  add_do_not_contact.py  add_drip_affects_pipeline.py  add_drip_campaign_tables.py  add_drip_campaign_tag_filter.py  add_drip_send_window.py  add_email_lead_capture_prefixes.py  add_email_responder_tables.py  add_fallback_voice_prompt.py  add_forum_comments.py  add_forum_tables.py  add_google_ads_webhook_key.py  add_jackrabbit_api_keys.py  (+37 more)
app/: __init__.py  logging_config.py  main.py  settings.py  settings.py.bak
app/api/: __init__.py  analytics_deps.py  deps.py  middleware.py  sendgrid_email.py
app/core/: __init__.py  auth.py  debug.py  encryption.py  idempotency.py  password.py  phone.py  tenant_context.py
app/domain/: __init__.py
app/infrastructure/: __init__.py  analytics.py  cloud_tasks.py  gmail_client.py  google_calendar_client.py  jackrabbit_client.py  notifications.py  outlook_client.py  pubsub.py  rate_limiter.py  redis.py  sendgrid_client.py  trestle_client.py  twilio_client.py  widget_asset_storage.py
app/llm/: __init__.py  client.py  factory.py  gemini_client.py  orchestrator.py
app/persistence/: __init__.py  database.py  types.py
app/utils/: jackrabbit_url_builder.py  name_validator.py  registration_url_builder.py  registration_url_detector.py
app/workers/: __init__.py  burst_detection_worker.py  chi_worker.py  drip_worker.py  email_outreach_worker.py  email_worker.py  followup_worker.py  health_snapshot_worker.py  promise_worker.py  sms_worker.py  telnyx_sync_worker.py  topic_worker.py
client/: .dockerignore  Dockerfile  deploy-frontend.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
docs/: BSS_VOICE_AGENT_PROMPT_COMBINED.md  CHATBOT_SESSION_CONTEXT.md  CUSTOMER_SERVICE_AGENT_SETUP.md  ConvoPro_Sales_Deck.md  DATABASE_SCHEMA.md  EMAIL_RESPONDER_SETUP.md  GMAIL_OAUTH_SETUP.md  INFRASTRUCTURE_AND_SECRETS.md  NEW_TENANT_SETUP.md  STATE_MACHINES.md  TELNYX_VOICE_AGENTS.md  TELNYX_WEBHOOK_SETUP.md  TENANT_PROMPT_ISOLATION.md  VOICE_ASSISTANT_ROADMAP.md  VOICE_PROMPT_IMPLEMENTATION.md  ZAPIER_ENROLLMENT_SETUP.md  config_matrix.md  session_notes_20260116.md  tenant4_voice_agent_prompt.txt  tenant_onboarding.md
notebooks/: README.md  data_analysis.ipynb  utils.py
prompts/: tenant3_telnyx_voice_prompt.txt
scripts/: README_PRODUCTION_TENANT.md  add_oauth_redirect_uri.py  add_spanish_number_tenant3.py  add_subject_sms_templates.py  add_tenant.py  backfill_call_durations.py  backfill_inline_sent_assets.py  backfill_lead_scores.py  check_followup_config.py  check_sms_status.py  check_telnyx_config.py  check_tenant3_consistency.py  check_tenant3_prompts.py  check_tenant3_sms_config.py  cleanup_sms_as_calls.py  connect_voice_phone.py  create_base_prompt.py  create_bss_cypress_spring_prompt.py  create_bss_global_prompt.py  create_global_swim_school_prompt.py  create_tenant3_voice_config.py  create_tenant3_voice_prompt.py  create_tenant_production.sh  create_tenant_production_with_proxy.sh  create_test_tenant.py  deploy-cloud-run.sh  enable_dual_bot.py  fix_tenant3_sendable_assets.py  fix_tenant3_sms_config.py  fix_tenant3_voice.py  fix_tenant3_voice_prod.py  generate_channel_prompts.py  list_tenants.py  load_test_sms_webhooks.py  login_tenant.py  onboard_tenant.py  pull-notebooks.sh  quick_login.sh  reassign_phone_to_tenant1.py  restore_lead_updated_at.py  (+30 more)
static/: admin-dashboard.html  chat-widget.js  index.html  test-widget.html  wordpress-embed-fixed.html  wordpress-embed.html
tasks/: google_ads_webhook.md  todo.md
tests/: __init__.py  conftest.py  test_business_hours.py  test_conversation_persistence.py  test_email_body_parser.py  test_email_service.py  test_email_webhooks.py  test_gmail_client.py  test_handoff_service.py  test_idempotency.py  test_jackrabbit_zapier_integration.py  test_lead_scoring_service.py  test_promise_fulfillment.py  test_prompt_composition.py  test_sms_compliance.py  test_sms_service.py  test_sms_webhooks.py  test_swimmer_pronoun_rules.py  test_telnyx_webhooks.py  test_tenant_isolation.py  test_twilio_voice_client.py  test_voice_eval_harness.py  test_voice_integration.py  test_voice_notifications.py  test_voice_service.py  test_voice_webhooks.py
(+397 files in other folders)
