[project]
name = "chattercheatah"
version = "0.1.0"
description = "Multi-tenant AI customer communication platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6", # Required for FastAPI form data (Twilio webhooks)
    # Database & ORM
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0", # Required for Alembic's synchronous PostgreSQL connections
    # Cache
    "redis[hiredis]>=5.0.0",
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Data Validation & Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    # GCP Core Services
    "google-auth>=2.23.0",
    "google-cloud-tasks>=2.14.0",
    "google-cloud-storage>=2.13.0",
    "cloud-sql-python-connector[asyncpg]>=1.4.0", # Cloud SQL Auth Proxy alternative
    # GCP BigQuery (SQL & Analytics)
    "google-cloud-bigquery>=3.13.0",
    # LLM (Google Gemini)
    "google-generativeai>=0.3.0",
    # SMS/Communication
    "twilio>=8.0.0",
    # Utilities
    "pytz>=2023.3", # For timezone handling in business hours
    "bcrypt>=5.0.0",
    "google-genai>=1.55.0",
    "langcodes>=3.3.0", # For standardizing language codes
    "langdetect>=1.0.9", # For detecting language of user input
    "phonenumbers>=8.13.0", # For phone number parsing and E.164 formatting
    # Gmail API (Email Responder)
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.0",
    # SendGrid (Email sending)
    "sendgrid>=6.10.0",
    # HTTP Client (Website Scraping)
    "httpx>=0.25.0",
    # Error Tracking
    "sentry-sdk[fastapi]>=1.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "ruff>=0.1.0",  # Linting
]

# All optional dependencies combined
all = [
    "chattercheatah[dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

